Added Header Section

--- a/index.html
+++ b/index.html
@@ -16,15 +16,10 @@
             <!-- logo -->
             <div class="pr-7 py-7">
                 <a href="#" class="cursor-pointer">
-                  <img
-                    src="./images/a.png"
-                    width="125px"
-                    height="30px"
-                  
-                  />
+                    <img src="./images/a.png" width="125px" height="30px" />
                 </a>
-              </div>
-           
+            </div>
+
             <!-- list items  -->
             <ul class="flex space-x-6">
 
@@ -83,12 +78,37 @@
 
                 <div class="py-3 px-4 font-mullish rounded-sm text-sm font-bold bg-white text-lightBlue border
                 transition-all duration-200 hover:text-red-200">
-                   <button >Sign up &rarr;</button>
+                    <button>Sign up &rarr;</button>
                 </div>
 
             </div>
         </div>
     </nav>
+
+    <!-- hero-Section -->
+    <section class="relative text-white" style="background: linear-gradient(45deg, #02042b, #02042b 50%)">
+        <div class="w-10/12 max-w-[1080] mx-auto flex items-center justify-center">
+                <!-- left-part  -->
+                <div class="flex flex-col space-y-8 font-mullish">
+                    <h1 class="text-[40px] font-extrabold leading-[1.2]">Power your finance, grow your business</h1>
+                    <div class="w-6 border-y-2 border-greenLight"></div>
+                    <p class="text-[18px] leading-7 opacity-70">Accept payments from customers. Automate payouts to
+                        vendors & employees. Never run out of working
+                        capital.</p>
+                    <button
+                        class="w-fit py-[14px] px-[18px] bg-lightBlue rounded-md transition-all duration-200 hover:bg-lightBlue500">Sign
+                        Up Now &rarr;</button>
+                </div>
+                <!-- right-part  -->
+                <div class="max-w-[680px]">
+                    <img src="./images/hero-illustration.jpg" class="w-full">
+                </div>
+        </div>
+        <!-- shape-part  -->
+        <div class="absolute w-[100%] left-0 right-0 top-[99%]">
+            <img class="w-full" src="./images/hero-shape.png">
+        </div>
+    </section>
 </body>
 
 </html>
