--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Razorpay CLone</title>
     <link rel="stylesheet" href="main.css">
     <script src="https://kit.fontawesome.com/f4eaa7022c.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 
-<body>
+<body class="">
     <!-- Nav Section Completed  -->
     <nav class="bg-deepBlue">
         <div class="relative w-[1080] mx-auto flex items-center justify-around text-white font-mullish">
@@ -171,12 +172,12 @@
             <!-- payment links and pages box  -->
             <div class="w-full grid grid-cols-3 gap-4 my-10">
                 <!-- box-1 -->
-                <div class="featureCard w-full relative min-h-[15rem] cursor-pointer">
-                    <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200 featureCardIcon"
+                <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
+                    <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
                         src="./images/sett.png" alt="">
                     <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
                         preserveAspectRatio="none"
-                        class="stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                        class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
                         style="stroke-opacity: 0.15">
                         <path d="m 0 6 
                         a 6 6 0 0 1 6 -6 
@@ -190,15 +191,188 @@
                         a 6 6 0 0 1 -6 -6 
                         z" fill="#fff"></path>
                     </svg>
-                    <div>
-                        <h3>Payment Links</h3>
-                        <p>Share payment link via an email, SMS, messenger, chatbot etc.
-                            and get paid immediately</p>
+                    <!-- box content  -->
+                    <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
+                        <div>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
+                                and get paid immediately</p>
+                        </div>
+                        <div>
+                            <a href="#"
+                                class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Know
+                                more &gt; </a>
+                        </div>
                     </div>
-                    <div>
-                        <a href="#"
-                            class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Know
-                            more &gt; </a>
+                </div>
+                <!-- box-2  -->
+                <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
+                    <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
+                        src="./images/sett.png" alt="">
+                    <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                        style="stroke-opacity: 0.15">
+                        <path d="m 0 6 
+                        a 6 6 0 0 1 6 -6 
+                        h 250.32501220703125 
+                        a 16 16 0 0 1 11 5 
+                        l 77 77 
+                        a 16 16 0 0 1 5 11 
+                        v 126 
+                        a 6 6 0 0 1 -6 6 
+                        h -337.32501220703125 
+                        a 6 6 0 0 1 -6 -6 
+                        z" fill="#fff"></path>
+                    </svg>
+                    <!-- box content  -->
+                    <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
+                        <div>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
+                                and get paid immediately</p>
+                        </div>
+                        <div>
+                            <a href="#"
+                                class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Know
+                                more &gt; </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- box-3  -->
+                <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
+                    <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
+                        src="./images/sett.png" alt="">
+                    <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                        style="stroke-opacity: 0.15">
+                        <path d="m 0 6 
+                        a 6 6 0 0 1 6 -6 
+                        h 250.32501220703125 
+                        a 16 16 0 0 1 11 5 
+                        l 77 77 
+                        a 16 16 0 0 1 5 11 
+                        v 126 
+                        a 6 6 0 0 1 -6 6 
+                        h -337.32501220703125 
+                        a 6 6 0 0 1 -6 -6 
+                        z" fill="#fff"></path>
+                    </svg>
+                    <!-- box content  -->
+                    <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
+                        <div>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
+                                and get paid immediately</p>
+                        </div>
+                        <div>
+                            <a href="#"
+                                class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Know
+                                more &gt; </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- box-4  -->
+                <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
+                    <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
+                        src="./images/sett.png" alt="">
+                    <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                        style="stroke-opacity: 0.15">
+                        <path d="m 0 6 
+                        a 6 6 0 0 1 6 -6 
+                        h 250.32501220703125 
+                        a 16 16 0 0 1 11 5 
+                        l 77 77 
+                        a 16 16 0 0 1 5 11 
+                        v 126 
+                        a 6 6 0 0 1 -6 6 
+                        h -337.32501220703125 
+                        a 6 6 0 0 1 -6 -6 
+                        z" fill="#fff"></path>
+                    </svg>
+                    <!-- box content  -->
+                    <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
+                        <div>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
+                                and get paid immediately</p>
+                        </div>
+                        <div>
+                            <a href="#"
+                                class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Know
+                                more &gt; </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- box-5  -->
+                <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
+                    <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
+                        src="./images/sett.png" alt="">
+                    <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                        style="stroke-opacity: 0.15">
+                        <path d="m 0 6 
+                        a 6 6 0 0 1 6 -6 
+                        h 250.32501220703125 
+                        a 16 16 0 0 1 11 5 
+                        l 77 77 
+                        a 16 16 0 0 1 5 11 
+                        v 126 
+                        a 6 6 0 0 1 -6 6 
+                        h -337.32501220703125 
+                        a 6 6 0 0 1 -6 -6 
+                        z" fill="#fff"></path>
+                    </svg>
+                    <!-- box content  -->
+                    <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
+                        <div>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
+                                and get paid immediately</p>
+                        </div>
+                        <div>
+                            <a href="#"
+                                class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Know
+                                more &gt; </a>
+                        </div>
+                    </div>
+                </div>
+                <!-- box-6  -->
+                <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
+                    <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
+                        src="./images/sett.png" alt="">
+                    <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                        style="stroke-opacity: 0.15">
+                        <path d="m 0 6 
+                        a 6 6 0 0 1 6 -6 
+                        h 250.32501220703125 
+                        a 16 16 0 0 1 11 5 
+                        l 77 77 
+                        a 16 16 0 0 1 5 11 
+                        v 126 
+                        a 6 6 0 0 1 -6 6 
+                        h -337.32501220703125 
+                        a 6 6 0 0 1 -6 -6 
+                        z" fill="#fff"></path>
+                    </svg>
+                    <!-- box content  -->
+                    <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
+                        <div>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
+                                and get paid immediately</p>
+                        </div>
+                        <div>
+                            <a href="#"
+                                class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Know
+                                more &gt; </a>
+                        </div>
                     </div>
                 </div>
             </div>
