--- a/index.html
+++ b/index.html
@@ -175,26 +175,27 @@
                 <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
                     <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
                         src="./images/sett.png" alt="">
-                    <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
-                        preserveAspectRatio="none"
-                        class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
-                        style="stroke-opacity: 0.15">
-                        <path d="m 0 6 
-                        a 6 6 0 0 1 6 -6 
-                        h 250.32501220703125 
-                        a 16 16 0 0 1 11 5 
-                        l 77 77 
-                        a 16 16 0 0 1 5 11 
-                        v 126 
-                        a 6 6 0 0 1 -6 6 
-                        h -337.32501220703125 
-                        a 6 6 0 0 1 -6 -6 
-                        z" fill="#fff"></path>
-                    </svg>
+                            <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
+                                preserveAspectRatio="none"
+                                class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                                style="stroke-opacity: 0.15">
+                                <path d="m 0 6 
+                                a 6 6 0 0 1 6 -6 
+                                h 250.32501220703125 
+                                a 16 16 0 0 1 11 5 
+                                l 77 77 
+                                a 16 16 0 0 1 5 11 
+                                v 126 
+                                a 6 6 0 0 1 -6 6 
+                                h -337.32501220703125 
+                                a 6 6 0 0 1 -6 -6 
+                                z" fill="#fff"></path>
+                            </svg>
                     <!-- box content  -->
                     <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
                         <div>
-                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links
+                            </h3>
                             <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
                                 and get paid immediately</p>
                         </div>
@@ -228,7 +229,8 @@
                     <!-- box content  -->
                     <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
                         <div>
-                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links
+                            </h3>
                             <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
                                 and get paid immediately</p>
                         </div>
@@ -262,7 +264,8 @@
                     <!-- box content  -->
                     <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
                         <div>
-                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links
+                            </h3>
                             <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
                                 and get paid immediately</p>
                         </div>
@@ -296,7 +299,8 @@
                     <!-- box content  -->
                     <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
                         <div>
-                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links
+                            </h3>
                             <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
                                 and get paid immediately</p>
                         </div>
@@ -330,7 +334,8 @@
                     <!-- box content  -->
                     <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
                         <div>
-                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links
+                            </h3>
                             <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
                                 and get paid immediately</p>
                         </div>
@@ -364,7 +369,8 @@
                     <!-- box content  -->
                     <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
                         <div>
-                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links</h3>
+                            <h3 class="text-[1.375rem] text-deepBlueHead font-extrabold leading-[1.2]">Payment Links
+                            </h3>
                             <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot etc.
                                 and get paid immediately</p>
                         </div>
@@ -376,7 +382,23 @@
                     </div>
                 </div>
             </div>
+            <!-- notice section -->
+            <div class="border border-lightBlue bg-gradient-to-b from-indigo-100 rounded-md relative">
+                <div class="flex justify-center space-x-4 py-3">
+                    <div>
+                        <span class="font-extrabold">Not sure which product to choosen ?</span>
+                    </div>
+                    <div class="opacity-50">Answer a few questions and we’ll help you out</div>
+                    <div>
+                        <div>
+                            <a href="#"
+                                class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Find me a product &gt; </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+    </section>
 </body>
 
 </html>
