--- a/codecopy.html
+++ b/codecopy.html
@@ -756,7 +756,7 @@ index.html
 
     <!-- Feature Section2 Start -->
     <section
-      class="bg-[url(./Images/feature-section-2BG.svg)] bg-cover bg-no-repeat w-full mt-14 pt-[16rem] pb-[500px] font-mullish text-white z-[100]"
+      class="bg-[url(./Images/feature-section-2BG.svg)] bg-cover bg-no-repeat w-full mt-14 pt-[16rem] pb-[500px] font-mullish text-white"
     >
       <div class="w-11/12 mx-auto pt-4 max-w-[1080px]">
         <h2 class="text-2xl leading-[1.2] text-center font-extrabold">
@@ -2210,3 +2210,6 @@ index.html
     </script>
   </body>
 </html>
+
+
+
