--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
                 <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
                     <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
                         src="./images/sett.png" alt="">
-                            <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
-                                preserveAspectRatio="none"
-                                class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
-                                style="stroke-opacity: 0.15">
-                                <path d="m 0 6 
+                    <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
+                        preserveAspectRatio="none"
+                        class=" stroke-1 stroke-[#818597] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                        style="stroke-opacity: 0.15">
+                        <path d="m 0 6 
                                 a 6 6 0 0 1 6 -6 
                                 h 250.32501220703125 
                                 a 16 16 0 0 1 11 5 
@@ -190,7 +190,7 @@
                                 h -337.32501220703125 
                                 a 6 6 0 0 1 -6 -6 
                                 z" fill="#fff"></path>
-                            </svg>
+                    </svg>
                     <!-- box content  -->
                     <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
                         <div>
@@ -392,13 +392,209 @@
                     <div>
                         <div>
                             <a href="#"
-                                class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Find me a product &gt; </a>
+                                class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Find
+                                me a product &gt; </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- business section  -->
+    <section class="bg-[url(./images/shape-mid.png)] bg-no-repeat bg-cover pt-[16rem] pb-[500px] mt-14 text-white">
+        <div class="w-10/12 max-w-[1080px] mx-auto relative pt-4">
+            <!-- heading section  -->
+            <div class="space-y-4 mt-0">
+                <h4 class="text-2xl leading-[1.2] text-center font-extrabold">Explore RazorpayX powered Business Banking
+                </h4>
+                <div class="border-greenLight w-6 border-y-2 mx-auto"></div>
+            </div>
+            <!-- flame section  -->
+            <div class="z-0">
+                <div class="scale-x-[1] right-auto -top-[25px] -left-[140px] w-[200px] absolute">
+                    <!-- left image -->
+                    <img src="./images/fl.png" alt="">
+                </div>
+                <div class="top-[300px] -right-[180px] w-[270px] absolute">
+                    <!-- right-image  -->
+                    <img src="./images/fr.png" alt="">
+                </div>
+            </div>
+            <!-- card section -->
+            <div
+                class="w-full border border-gray-400 bg-[#181c2e] border-opacity-50 rounded-md min-h-[520px] p-10 py-12 flex relative z-[20] mt-14">
+                <!-- left part  -->
+                <div class="flex flex-col justify-between space-y-10 w-full">
+                    <div class="relative">
+                        <h2 class="text-[28px] leading-10 font-bold max-w-[500px]">Manage your company’s finances and
+                            supercharge your business banking with</h2>
+                        <img class="w-[150px] absolute top-[72%] left-[7%]" src="./images/a.png" alt="">
+                    </div>
+                    <ul class="space-y-2">
+                        <li class="space-x-3">
+                            <i class="text-greenLight">&check;</i>
+                            <span>Open a fully digital current account</span>
+                        </li>
+                        <li class="space-x-3">
+                            <i class="text-greenLight">&check;</i>
+                            <span>Automate payables & compliment payments</span>
+                        </li>
+                        <li class="space-x-3">
+                            <i class="text-greenLight">&check;</i>
+                            <span>Simplify and track spends with Corporate cards</span>
+                        </li>
+                        <li class="space-x-3">
+                            <i class="text-greenLight">&check;</i>
+                            <span>View financial insights at a glance</span>
+                        </li>
+                    </ul>
+
+                    <div class="space-x-4">
+                        <button
+                            class=" text-white w-fit py-[14px] px-[18px] bg-lightBlue rounded-md transition-all duration-200 hover:bg-lightBlue500">Sign
+                            Up Now &rarr;</button>
+                        <a href="#" class="text-lightBlue500  transition-all duration-300 font-bold">Know
+                            more &gt; </a>
+                    </div>
+
+                </div>
+                <!-- right part  -->
+                <div class="max-w-[635px] absolute right-0 top-0 bottom-0">
+                    <img class="w-full" src="./images/cr.png" alt="">
+                </div>
+            </div>
+            <!-- box-area -->
+            <div class="w-full grid grid-cols-3 gap-4 my-10">
+                <!-- box-1  -->
+                <div class="">
+                    <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
+                        <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
+                            src="./images/sett.png" alt="">
+                        <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
+                            preserveAspectRatio="none"
+                            class="stroke-1 stroke-[#525a76] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                            style="stroke-opacity: 0.8">
+                            <path d="m 0 6 
+                      a 6 6 0 0 1 6 -6 
+                      h 250.32501220703125 
+                      a 16 16 0 0 1 11 5 
+                      l 77 77 
+                      a 16 16 0 0 1 5 11 
+                      v 126 
+                      a 6 6 0 0 1 -6 6 
+                      h -337.32501220703125 
+                      a 6 6 0 0 1 -6 -6 
+                      z" fill="#181C2E"></path>
+                        </svg>
+                        <!-- box content  -->
+                        <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
+                            <div>
+                                <h3 class="text-[1.375rem] text-white font-extrabold leading-[1.2]">Current Account
+                                </h3>
+                                <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot
+                                    etc.
+                                    and get paid immediately</p>
+                            </div>
+                            <div>
+                                <a href="#"
+                                    class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Know
+                                    more &gt; </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- box-2  -->
+                <div class="">
+                    <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
+                        <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
+                            src="./images/sett.png" alt="">
+                        <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
+                            preserveAspectRatio="none"
+                            class="stroke-1 stroke-[#525a76] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                            style="stroke-opacity: 0.8">
+                            <path d="m 0 6 
+                      a 6 6 0 0 1 6 -6 
+                      h 250.32501220703125 
+                      a 16 16 0 0 1 11 5 
+                      l 77 77 
+                      a 16 16 0 0 1 5 11 
+                      v 126 
+                      a 6 6 0 0 1 -6 6 
+                      h -337.32501220703125 
+                      a 6 6 0 0 1 -6 -6 
+                      z" fill="#181C2E"></path>
+                        </svg>
+                        <!-- box content  -->
+                        <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
+                            <div>
+                                <h3 class="text-[1.375rem] text-white font-extrabold leading-[1.2]">Current Account
+                                </h3>
+                                <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot
+                                    etc.
+                                    and get paid immediately</p>
+                            </div>
+                            <div>
+                                <a href="#"
+                                    class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Know
+                                    more &gt; </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- box-3 -->
+                <div class="">
+                    <div class="w-full relative min-h-[15rem] cursor-pointer hover:shadow-md">
+                        <img class="bg-lightBlue absolute right-3 top-3 w-12 h-12 rounded-full transition-all duration-200"
+                            src="./images/sett.png" alt="">
+                        <svg viewBox="0 0 349.32501220703125 225" xmlns="http://www.w3.org/2000/svg"
+                            preserveAspectRatio="none"
+                            class="stroke-1 stroke-[#525a76] h-full w-full absolute z-[90] featureCardSVG transition-all duration-200 featureCardSVG"
+                            style="stroke-opacity: 0.8">
+                            <path d="m 0 6 
+                      a 6 6 0 0 1 6 -6 
+                      h 250.32501220703125 
+                      a 16 16 0 0 1 11 5 
+                      l 77 77 
+                      a 16 16 0 0 1 5 11 
+                      v 126 
+                      a 6 6 0 0 1 -6 6 
+                      h -337.32501220703125 
+                      a 6 6 0 0 1 -6 -6 
+                      z" fill="#181C2E"></path>
+                        </svg>
+                        <!-- box content  -->
+                        <div class="z-[1000] flex flex-col absolute h-full w-full pl-5 py-6 pr-8 justify-between">
+                            <div>
+                                <h3 class="text-[1.375rem] text-white font-extrabold leading-[1.2]">Current Account
+                                </h3>
+                                <p class="mt-6 text-grayText">Share payment link via an email, SMS, messenger, chatbot
+                                    etc.
+                                    and get paid immediately</p>
+                            </div>
+                            <div>
+                                <a href="#"
+                                    class="text-lightBlue500 hover:text-gray-800 transition-all duration-300 font-bold">Know
+                                    more &gt; </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- notice box -->
+            <div class="border border-gray-500 rounded-md flex justify-around py-5 items-center">
+                <div class="opacity-80">
+                    <span class="font-bold">Check out the live demo to learn how RazorpayX works.</span>
+                    <span class="font-extrabold"> No sign-up required!</span>
+                </div>
+                <div>
+                   <button class=" text-white w-fit py-[14px] px-[18px] bg-lightBlue rounded-md transition-all duration-200 hover:bg-lightBlue500 font-bold">Check out the demo &rarr;</button>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
 </body>
 
 </html>
