--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
             </p>
             <p class="mt-6">
               Focus on your business while we handle the complexities of payments
-              for you.
+              for
             </p>
             <div class="mt-8 hover:bg-lightBlue500">
                 <button class=" text-white w-fit py-[14px] px-[18px] bg-lightBlue rounded-md transition-all duration-200 font-bold">Get Started &rarr;</button>
