--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razorpay CLone</title>
-    <link rel="stylesheet" href="main.css">
+    <!-- added new link  -->
+    <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/f4eaa7022c.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/feather-icons"></script>
     <style>
