--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razorpay CLone</title>
-    <!-- added new link  -->
+    <!-- added cdn tailwind link link  -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
     <script src="https://kit.fontawesome.com/f4eaa7022c.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/feather-icons"></script>
+
     <style>
 
      .companiesList {
